--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ nav a{
     text-decoration: none;
     background-color: black;
     color: white;
-    padding: 0.5em;
+    padding: 0.8em;
 
 }
 
@@ -17,7 +17,7 @@ nav a{
 }
 
 #london{
-    background-color: rgb(244, 236, 166);
+    background-color: rgb(228, 224, 183);
     padding: 1em;
     margin-bottom: 1em;
     margin-top: 1em;
@@ -35,4 +35,9 @@ nav a{
     padding: 1em;
     margin-bottom: 1em;
     
+}
+
+footer{
+    border-top: solid;
+    padding-top: 1em;
 }
